# leqaa

./: .gitignore  MODELOUTPUT.md  README.md  docker-compose.debug.yml  docker-compose.yml  leqaa.sln  model.py  notes.md
APIGateway/: APIGateway.csproj  APIGateway.sln  Dockerfile  Program.cs  appsettings.json  docker-compose.dcproj  ocelot.Development.json
Authentication/: .gitignore  Authentication.sln  README.md
BusinessDomain/: .gitignore  README.md  business.code-workspace  create_new_entity.sh  delete_entity.sh  docker-compose.yml  leqaa.sln
BusinessLogic.Application/: BusinessLogic.Application.csproj  Class1.cs
BusinessLogic.DependencyInjection/: BusinessLogic.DependencyInjection.csproj  Program.cs  WeatherForecast.cs
BusinessLogic.IntegrationTests/: BusinessLogic.IntegrationTests.csproj  ChannelRepositoryTests.cs
BusinessLogic.Persistence/: ApplicationDbContext.cs  BusinessLogic.Persistence.csproj
BusinessLogic.Presentation/: BusinessLogic.Presentation.csproj  Program.cs  WeatherForecast.cs  appsettings.json
BusinessLogic.UnitTest/: BusinessLogic.UnitTest.csproj  HubRepositoryTestInMemory.cs  HubRepositoryTests.cs  RoomRepositoryTests.cs
Payment-GateWay/: Payment-GateWay.sln
api gateway/: apiGateway.cs
auth/: auth.cs
documentation/: brd.md
front-end/: Dockerfile  package-lock.json  package.json
sad/: BusinessLogic.Presentation.csproj
server/: pyproject.toml
server/app/: settings.py
streaming-server/: .env.template  .gitignore  README.md  package-lock.json  package.json  signaling-server.js
streamserver/: index.js  package.json
(+1052 files in other folders)
